add_library(gfx.default_app INTERFACE)
if(WIN32)
	target_sources(gfx.default_app INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/src/app.rc)
endif()
target_compile_features(gfx.default_app INTERFACE cxx_std_17)
if(WIN32)
	target_link_libraries(gfx.default_app INTERFACE comctl32)
endif()
target_compile_options(gfx.default_app INTERFACE ${compile_options})
add_library(jbraun::gfx.default_app ALIAS gfx.default_app)
# set_target_properties(gfx.default_app PROPERTIES LINK_FLAGS_RELEASE "-subsystem:windows -entry:mainCRTStartup")

set(GFX_LOGO_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/logo.ico)
set(GFX_RES_VERSION ${GFX_VERSION})
string(REGEX REPLACE "\\." "," GFX_RES_VERSION ${GFX_RES_VERSION})
string(TIMESTAMP CURRENT_YEAR %Y UTC)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/app.rc.in ${CMAKE_CURRENT_BINARY_DIR}/src/app.rc @ONLY)